# zappchat

./: .env.template  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/core/: __init__.py  config.py
app/db/: __init__.py  client.py
app/llm/agents/: agent.py  agent_message.py  handle_agent.py  message_agent.py
app/llm/embeddings/: __init__.py  vertex.py
app/llm/prompts/: agent_prompt.py
app/llm/providers/: gemini.py
app/llm/stores/: __init__.py  supabase_store.py
app/llm/tools/: __init__.py  basic_tools.py  map_tool.py  retriever_tool.py  tool.py
app/llm/utils/: __init__.py  helpers.py  message.py  products.py
app/routes/: __init__.py  products.py  route1.py  route2.py
app/services/: contact_service.py  message_service.py  order_service.py  product_service.py  report_service.py  schedule_service.py  settings_service.py  survey_service.py
app/services/supabase/: client.py
app/utils/: __init__.py  logger.py
app/webhooks/: wa_handler.py
data/company/: products.json
